--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -103,6 +103,14 @@
             </a>
           </div>
 
+          <div th:if="${permissions.contains('GET /admin/examapprove')}">
+            <a class="nav-link" href="/admin/examapprove">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-file-alt"></i>
+              </div>
+              Phê duyệt đề thi
+            </a>
+          </div>
           <div th:if="${permissions.contains('GET /admin/test')}">
             <a class="nav-link" href="/admin/test">
               <div class="sb-nav-link-icon">
